Adding favicon to the project

--- a/project1/index.html
+++ b/project1/index.html
@@ -9,7 +9,7 @@
 
     <title>Gazetteer</title>
 
-    <!-- <link href="favicon.ico" rel="icon"> -->
+    <link href="favicon.ico" rel="icon" />
 
     <!-- Adding Bootstrap 5.1.3 -->
     <link rel="stylesheet" href="../task/vendors/bootstrap/bootstrap.min.css" />
