organize index.html commenting code

--- a/project1/index.html
+++ b/project1/index.html
@@ -29,6 +29,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-around">
+          <!-- button to country and cities info modal -->
           <li class="nav-item">
             <button
               type="button"
@@ -38,6 +39,8 @@
               data-bs-target="#country_citiesModal"
             ></button>
           </li>
+
+          <!-- button to wikipedia info modal -->
           <li class="nav-item">
             <button
               type="button"
@@ -47,6 +50,8 @@
               data-bs-target="#wikiModal"
             ></button>
           </li>
+
+          <!-- button to video about country modal -->
           <li class="nav-item">
             <button
               type="button"
@@ -56,6 +61,8 @@
               data-bs-target="#youtubeModal"
             ></button>
           </li>
+
+          <!-- button to holiday off modal -->
           <li class="nav-item">
             <button
               type="button"
@@ -65,6 +72,8 @@
               data-bs-target="#calendarModal"
             ></button>
           </li>
+
+          <!-- button to weather modal -->
           <li class="nav-item">
             <button
               type="button"
@@ -74,6 +83,8 @@
               data-bs-target="#weatherModal"
             ></button>
           </li>
+
+          <!-- button to language modal -->
           <li class="nav-item">
             <button
               type="button"
@@ -83,6 +94,8 @@
               data-bs-target="#languageModal"
             ></button>
           </li>
+
+          <!-- button to covid info modal -->
           <li class="nav-item">
             <button
               type="button"
@@ -107,6 +120,7 @@
     </div>
 
     <!-- MODALS -->
+    <!-- COUNTRY CITIES -->
     <div
       class="modal fade"
       id="country_citiesModal"
@@ -116,6 +130,7 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
+          <!-- header -->
           <div class="modal-header">
             <h5 class="modal-title" id="country_citiesModalLabel">
               Country & Cities Info
@@ -127,7 +142,11 @@
               aria-label="Close"
             ></button>
           </div>
+          <!-- body -->
+
           <div class="modal-body">...</div>
+
+          <!-- footer -->
           <div class="modal-footer">
             <button
               type="button"
