--- a/project1/index.html
+++ b/project1/index.html
@@ -22,6 +22,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <!-- select countries -->
       <select
+        disabled
         class="form-select"
         id="countrySelect"
         name="countrySelect"
