Added custom style for select countries

--- a/project1/index.html
+++ b/project1/index.html
@@ -21,12 +21,7 @@
     <!-- Nabbar -->
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <!-- select countries -->
-      <select
-        disabled
-        class="form-select"
-        id="countrySelect"
-        name="countrySelect"
-      ></select>
+      <select disabled id="countrySelect" name="countrySelect"></select>
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav w-100 justify-content-around">
