Added leaflet library and linked them

--- a/project1/index.html
+++ b/project1/index.html
@@ -13,6 +13,10 @@
 
     <!-- Adding Bootstrap 5.1.3 -->
     <link rel="stylesheet" href="../task/vendors/bootstrap/bootstrap.min.css" />
+
+    <!-- Leaflet CSS file -->
+    <link rel="stylesheet" href="./vendors/leaflet/leaflet.css" />
+
     <!-- Adding custom stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -158,6 +162,7 @@
     <!-- upload javascript files -->
     <script src="../task/vendors/jquery/jquery.min.js"></script>
     <script src="../task/vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="./vendors/leaflet/leaflet.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
