Added map to the main view

--- a/project1/index.html
+++ b/project1/index.html
@@ -110,7 +110,9 @@
     </nav>
 
     <!-- Main section for view map -->
-    <main></main>
+    <main class="container-fluid">
+      <div id="mapView"></div>
+    </main>
 
     <!-- Preloader animation place -->
     <div class="loading-area">
