change map to hybrid satellite and added some attributes

--- a/project1/index.html
+++ b/project1/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- Nabbar -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-navbar">
       <!-- select countries -->
       <select disabled id="countrySelect" name="countrySelect"></select>
 
