now project1 has own vendors folder to link css an js

--- a/project1/index.html
+++ b/project1/index.html
@@ -12,7 +12,7 @@
     <link href="favicon.ico" rel="icon" />
 
     <!-- Adding Bootstrap 5.1.3 -->
-    <link rel="stylesheet" href="../task/vendors/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="./vendors/bootstrap/bootstrap.min.css" />
 
     <!-- Leaflet CSS file -->
     <link rel="stylesheet" href="./vendors/leaflet/leaflet.css" />
@@ -23,7 +23,7 @@
 
   <body>
     <!-- Nabbar -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-navbar">
+    <nav class="navbar navbar-expand-sm navbar-light bg-navbar">
       <!-- select countries -->
       <select disabled id="countrySelect" name="countrySelect"></select>
 
@@ -162,8 +162,8 @@
       </div>
     </div>
     <!-- upload javascript files -->
-    <script src="../task/vendors/jquery/jquery.min.js"></script>
-    <script src="../task/vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="./vendors/jquery/jquery.min.js"></script>
+    <script src="./vendors/bootstrap/bootstrap.min.js"></script>
     <script src="./vendors/leaflet/leaflet.js"></script>
     <script src="js/script.js"></script>
   </body>
