Change look nav is now in right corner

--- a/project1/index.html
+++ b/project1/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <!-- Nabbar -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-navbar">
+    <nav>
       <!-- select countries -->
       <select disabled id="countrySelect" name="countrySelect"></select>
     </nav>
