Added all modals linked to show when pressed button

--- a/project1/index.html
+++ b/project1/index.html
@@ -43,7 +43,7 @@
       <span class="load-anim2"></span>
     </div>
 
-    <!-- MODALS -->
+    <!-- *********************************** MODALS ***************************************** -->
     <!-- COUNTRY CITIES -->
     <div
       class="modal fade"
@@ -58,6 +58,244 @@
           <div class="modal-header">
             <h5 class="modal-title" id="country_citiesModalLabel">
               Country & Cities Info
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <!-- body -->
+
+          <div class="modal-body">...</div>
+
+          <!-- footer -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- WIKIPEDIA -->
+    <div
+      class="modal fade"
+      id="wikiModal"
+      tabindex="-1"
+      aria-labelledby="wikiModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- header -->
+          <div class="modal-header">
+            <h5 class="modal-title" id="wikiModalLabel">Wikipedia</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <!-- body -->
+
+          <div class="modal-body">...</div>
+
+          <!-- footer -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Youtube -->
+    <div
+      class="modal fade"
+      id="youtubeModal"
+      tabindex="-1"
+      aria-labelledby="youtubeModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- header -->
+          <div class="modal-header">
+            <h5 class="modal-title" id="youtubeModalLabel">
+              Youtube Video About Country
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <!-- body -->
+
+          <div class="modal-body">...</div>
+
+          <!-- footer -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Calendar Modal -->
+    <div
+      class="modal fade"
+      id="calendarModal"
+      tabindex="-1"
+      aria-labelledby="calendarModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- header -->
+          <div class="modal-header">
+            <h5 class="modal-title" id="calendarModalLabel">
+              Calendar Country Holidays & Day Off
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <!-- body -->
+
+          <div class="modal-body">...</div>
+
+          <!-- footer -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Weather Forecast Modal -->
+    <div
+      class="modal fade"
+      id="weather_forecastModal"
+      tabindex="-1"
+      aria-labelledby="weather_forecastModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- header -->
+          <div class="modal-header">
+            <h5 class="modal-title" id="weather_forecastModalLabel">
+              Weather Forecast
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <!-- body -->
+
+          <div class="modal-body">...</div>
+
+          <!-- footer -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Language Modal -->
+    <div
+      class="modal fade"
+      id="languageModal"
+      tabindex="-1"
+      aria-labelledby="languageModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- header -->
+          <div class="modal-header">
+            <h5 class="modal-title" id="languageModalLabel">
+              Get Words For This Country Language
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <!-- body -->
+
+          <div class="modal-body">...</div>
+
+          <!-- footer -->
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Covid Modal -->
+    <div
+      class="modal fade"
+      id="covidModal"
+      tabindex="-1"
+      aria-labelledby="covidModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- header -->
+          <div class="modal-header">
+            <h5 class="modal-title" id="covidModalLabel">
+              Get Covid Information
             </h5>
             <button
               type="button"
