--- a/project1/index.html
+++ b/project1/index.html
@@ -159,7 +159,7 @@
                 aria-labelledby="cities-tab"
               >
                 <header class="my-3">Top Cities Over 1mln</header>
-                <table class="table table-striped">
+                <table class="table table-hover table-success table-responsive">
                   <thead class="table-warning">
                     <tr>
                       <th scope="col">#</th>
@@ -178,7 +178,7 @@
                 aria-labelledby="cities-small-tab"
               >
                 <header class="my-3">Top Cities Over 20k</header>
-                <table class="table table-striped">
+                <table class="table table-hover table-success table-responsive">
                   <thead class="table-warning">
                     <tr>
                       <th scope="col">#</th>
