Created place where wikipedia modal body result will be
Created place where wikipedia modal body result will be:

this time result will be created inside js and populated in index.html

--- a/project1/index.html
+++ b/project1/index.html
@@ -217,7 +217,8 @@
         <div class="modal-content">
           <!-- header -->
           <div class="modal-header">
-            <h5 class="modal-title" id="wikiModalLabel">Wikipedia</h5>
+            <h5 class="modal-title w-75 display-6 text-center" id="wikiModalLabel">Wikipedia</h5>
+            <img src="./img/wiki.ico" class="w-25">
             <button
               type="button"
               class="btn-close"
@@ -227,7 +228,8 @@
           </div>
           <!-- body -->
 
-          <div class="modal-body">...</div>
+          <div class="modal-body" id="wiki-modal-body">
+          </div>
 
           <!-- footer -->
           <div class="modal-footer">
