Preparing modal youtube videos about country

--- a/project1/index.html
+++ b/project1/index.html
@@ -217,8 +217,13 @@
         <div class="modal-content">
           <!-- header -->
           <div class="modal-header">
-            <h5 class="modal-title w-75 display-6 text-center" id="wikiModalLabel">Wikipedia</h5>
-            <img src="./img/wiki.ico" class="w-25">
+            <h5
+              class="modal-title w-75 display-6 text-center"
+              id="wikiModalLabel"
+            >
+              Wikipedia
+            </h5>
+            <img src="./img/wiki.ico" class="w-25" />
             <button
               type="button"
               class="btn-close"
@@ -228,8 +233,7 @@
           </div>
           <!-- body -->
 
-          <div class="modal-body" id="wiki-modal-body">
-          </div>
+          <div class="modal-body" id="wiki-modal-body"></div>
 
           <!-- footer -->
           <div class="modal-footer">
@@ -257,25 +261,26 @@
         <div class="modal-content">
           <!-- header -->
           <div class="modal-header">
-            <h5 class="modal-title" id="youtubeModalLabel">
-              Youtube Video About Country
-            </h5>
+            <h5
+              class="modal-title w-75 display-6 text-center"
+              id="youtubeModalLabel"
+            ></h5>
             <button
               type="button"
-              class="btn-close"
+              class="btn-close youtube-btn"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></button>
           </div>
           <!-- body -->
 
-          <div class="modal-body">...</div>
+          <div class="modal-body" id="youtube_result"></div>
 
           <!-- footer -->
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-secondary"
+              class="btn btn-secondary youtube-btn"
               data-bs-dismiss="modal"
             >
               Close
