--- a/project1/index.html
+++ b/project1/index.html
@@ -349,6 +349,8 @@
             <h5 class="modal-title" id="weather_forecastModalLabel">
               Weather Forecast
             </h5>
+            <!-- select countries -->
+            <select id="citySelect" name="citySelect"></select>
             <button
               type="button"
               class="btn-close"
