--- a/project1/index.html
+++ b/project1/index.html
@@ -343,7 +343,7 @@
       aria-hidden="true"
     >
       <div class="modal-dialog d-flex justify-content-center">
-        <div class="modal-content holiday-modal-content">
+        <div class="modal-content">
           <!-- header -->
           <div class="modal-header flex-column">
             <h5 class="modal-title" id="weather_forecastModalLabel"></h5>
@@ -359,7 +359,7 @@
           </div>
           <!-- body -->
 
-          <div class="modal-body" id="forecast_body">
+          <div class="modal-body forecast_view">
             <table class="table table-hover table-success table-responsive">
               <thead class="table-warning">
                 <tr>
