--- a/project1/index.html
+++ b/project1/index.html
@@ -352,7 +352,7 @@
             <select id="citySelect" name="citySelect"></select>
             <button
               type="button"
-              class="btn-close"
+              class="btn-close weather-close-btn"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></button>
@@ -360,7 +360,12 @@
           <!-- body -->
 
           <div class="modal-body forecast_view">
-            <table class="table table-hover table-success table-responsive">
+            <table
+              class="
+                table table-hover table-success table-responsive
+                text-center
+              "
+            >
               <thead class="table-warning">
                 <tr>
                   <th scope="col">Date</th>
