--- a/project1/index.html
+++ b/project1/index.html
@@ -348,7 +348,7 @@
           <div class="modal-header flex-column">
             <h5 class="modal-title" id="weather_forecastModalLabel"></h5>
             <br />
-            <!-- select countries -->
+            <!-- select city  -->
             <select id="citySelect" name="citySelect"></select>
             <button
               type="button"
