Format  comment code for easier to read

--- a/project1/index.html
+++ b/project1/index.html
@@ -306,7 +306,7 @@
           <!-- header -->
           <div class="modal-header">
             <h5
-              class="modal-title w-100 text-center"
+              class="modal-title w-100 text-center fs-2"
               id="calendarModalLabel"
             ></h5>
             <button
