Fixing position image and subtitle

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
         Hi, I am <strong>Andrius Alimas</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        &lt; Full Stack Web Dev &gt;
+        &lt; Web Dev &gt;
       </p>
       <img
+      class="intro__img"
         src="img/profile.jpg"
         alt="picture of Andrius Alimas in nature sitting on grasss "
       />
