Created intro section image shadow and fixed position

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         Hi, I am <strong>Andrius Alimas</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        &lt; Web Dev &gt;
+        &lt; Full Stack Dev &gt;
       </p>
       <img
       class="intro__img"
