--- a/project1/index.html
+++ b/project1/index.html
@@ -12,13 +12,13 @@
     <link href="favicon.ico" rel="icon" />
 
     <!-- Adding Bootstrap 5.1.3 -->
-    <link rel="stylesheet" href="./vendors/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="../vendors/bootstrap/bootstrap.min.css" />
 
     <!-- Leaflet CSS file -->
-    <link rel="stylesheet" href="./vendors/leaflet/leaflet.css" />
+    <link rel="stylesheet" href="../vendors/leaflet/leaflet.css" />
 
     <!-- adding easy button CSS file -->
-    <link rel="stylesheet" href="./vendors/leaflet/easy-button.css" />
+    <link rel="stylesheet" href="../vendors/leaflet/easy-button.css" />
 
     <!-- Evo-Calendar style -->
     <link rel="stylesheet" href="css/evo-calendar.min.css" />
@@ -432,10 +432,10 @@
       </div>
     </div>
     <!-- upload javascript files -->
-    <script src="./vendors/jquery/jquery.min.js"></script>
-    <script src="./vendors/bootstrap/bootstrap.min.js"></script>
-    <script src="./vendors/leaflet/leaflet.js"></script>
-    <script src="./vendors/leaflet/easy-button.min.js"></script>
+    <script src="../vendors/jquery/jquery.min.js"></script>
+    <script src="../vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="../vendors/leaflet/leaflet.js"></script>
+    <script src="../vendors/leaflet/easy-button.min.js"></script>
     <script src="./js/evo-calendar.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js"
